added dummy values to .env.example for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_GTM =
-NEXT_PUBLIC_APP_URL = 
-TELEGRAM_BOT_TOKEN = 
-TELEGRAM_CHAT_ID = 
-GMAIL_PASSKEY = 
-EMAIL_ADDRESS =
+NEXT_PUBLIC_GTM = GTM-XXXXXXX
+NEXT_PUBLIC_APP_URL = https://example.com
+TELEGRAM_BOT_TOKEN = dummy_token_123456789
+TELEGRAM_CHAT_ID = 123456789
+GMAIL_PASSKEY = dummy_passkey_123456789
+EMAIL_ADDRESS = example@example.com
