about section updated

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "15.1.1",
-    "axios": "^1.6.8",
+    "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
     "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
     "next": "15.1.1",
     "nodemailer": "^6.9.15",
+    "puppeteer": "^24.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.2",
